--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
     <button class="update-button">UPDATE</button>
-    
+
+    <div class="timer"></div>
+
     <canvas></canvas>
 
     <script src="code.js"></script>
