--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     
     <canvas></canvas>
 
+    <button class="popup-button" onclick="myFunction()">Try it</button>
+
+    <div id="demo"></p>
+
     <script src="code.js"></script>
 
 </body>
