cleaning up local repos

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <canvas></canvas>
 
-    <button class="popup-button" onclick="myFunction()">Try it</button>
+    <button class="popup-button" onclick="greet()">Try it</button>
 
     <div id="demo"></p>
 
